agrego vistas y mejoras

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -13,6 +13,7 @@
 <br>
 <br>
 <br>
-<button onclick="window.location.href='/products'">Productos</button>
+<button onclick="window.location.href='/productos'">Productos</button>
 <br>
-<button onclick="window.location.href='/carts'">Carritos</button>
+<br>
+<br>
