--- a/src/views/registro.handlebars
+++ b/src/views/registro.handlebars
@@ -2,18 +2,20 @@
 <hr>
 <form action="/api/sessions/registro" method="post">
 
-    {{#if error}}
-        <div style="font-weight: bold; color:red;">{{error}}</div>
-    {{/if}}
+   
+        <div id="error"></div>
+   
 
-    {{#if mensaje}}
-        <div style="font-weight: bold; color:green;">{{mensaje}}</div>
-    {{/if}}
+    
 
-    <input type="text" name="nombre" placeholder="nombre">
-    <input type="email" name="email" placeholder="email">
-    <input type="password" name="password" placeholder="contraseña">
+    <input type="text" name="nombre" placeholder="nombre" id="nombre">
+    <input type="text" name="apellido" placeholder="apellido" id="apellido">
+    <input type="email" name="email" placeholder="email" id="email">
+    <input type="number" name="edad" placeholder="edad" id="edad">
+    <input type="password" name="password" placeholder="contraseña" id="contraseña">
     <br>
     <input type="submit" value="Registrar">
 
 </form>
+
+<script src="/js/registro.js"></script>
