--- a/src/views/partials/menu.handlebars
+++ b/src/views/partials/menu.handlebars
@@ -2,9 +2,11 @@
     <li>
         <a href="/home">Home</a>
     </li>
+    {{#if usuario}}
     <li>
         <a href="/api/sessions/logout">Logout</a>
     </li>
+    {{/if}}
     <li>
         <a href="/registro">Registro</a>
     </li>
